--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <div class="api-keys-section">
                     <div class="section-header">
                         <label>Topaz API Keys:</label>
+                        <span id="totalCredits" class="api-key-credits">Total: 0 credits</span>
                     </div>
                     <div id="apiKeysList" class="api-keys-list">
                         <!-- API keys will be dynamically added here -->
@@ -163,8 +164,8 @@
 
                     <div class="option-row">
                         <div class="input-group">
-                            <label for="workers">Workers (50 Max):</label>
-                            <input type="number" id="workers" min="1" max="50" value="2">
+                            <label for="workers">Workers (20 Max):</label>
+                            <input type="number" id="workers" min="1" max="20" value="2">
                         </div>
                     </div>
                 </div>
@@ -211,6 +212,16 @@
                     </div>
                 </div>
 
+                <div class="activity-log-card">
+                    <div class="activity-log-header">
+                        <span class="activity-log-title">Activity Log</span>
+                        <button id="copyActivityLog" class="btn btn-secondary activity-log-copy-btn">Copy</button>
+                    </div>
+                    <div id="activityLogContent" class="activity-log-content">
+                        <div class="activity-log-empty">No activity yet</div>
+                    </div>
+                </div>
+
                 <!-- Action Buttons -->
                 <div class="action-buttons">
                     <button id="refreshFiles" class="btn btn-secondary">Refresh Files</button>
@@ -241,7 +252,7 @@
 
                 <!-- Processing Queue -->
                 <div class="processing-queue">
-                    <h3>Processing List</h3>
+                    <h3>Processing List <span id="processingCount" class="processing-count-label">(0)</span></h3>
                     <div id="processingList" class="processing-list">
                         <div class="empty-state">
                             <p>No processing tasks</p>
