--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                         <div class="input-group">
                             <label for="resolution">Target Resolution:</label>
                             <select id="resolution">
-                                <option value="1920x1080">Full HD (1920x1080)</option>
-                                <option value="2560x1440">2K (2560x1440)</option>
-                                <option value="3840x2160">4K (3840x2160)</option>
+                                <option value="1920x1080">Full HD</option>
+                                <option value="2560x1440">2K</option>
+                                <option value="3840x2160">4K</option>
                             </select>
                         </div>
 
@@ -183,24 +183,16 @@
                                 <option value="Text Refine">Text Refine - Images with text</option>
                             </select>
                         </div>
-
-                        <div class="input-group">
-                            <label for="outputFormat">Output Format:</label>
-                            <select id="outputFormat">
-                                <option value="jpeg">JPEG</option>
-                                <option value="png">PNG</option>
-                            </select>
-                        </div>
                     </div>
 
                     <div class="option-row">
                         <div class="input-group">
                             <label for="outputWidth">Target Resolution:</label>
                             <select id="outputWidth">
-                                <option value="1920">Full HD (1920x1080)</option>
-                                <option value="2560">2K (2560x1440)</option>
-                                <option value="3840">4K (3840x2160)</option>
-                                <option value="7680">8K (7680x4320)</option>
+                                <option value="1920">Full HD</option>
+                                <option value="2560">2K</option>
+                                <option value="3840">4K</option>
+                                <option value="7680">8K</option>
                             </select>
                         </div>
 
